# banner_sale

./: .gitignore  pyproject.toml
mysite/: settings.py  urls.py
orders/: admin.py  cdek_api.py  forms.py  models.py  urls.py  views.py
orders/templates/orders/: 01.html  banner.html  banner_generator.html  banner_list.html  bannerorder_confirm_delete.html  cdek_map.html  create_banner.html  delivery.html
orders/templates/orders/css/: style.css
orders/templates/orders/js/: script.js
users/: models.py
users/templates/: base.html
users/templates/account/: login.html
