[project]
name = "banner-sale"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0",
    "django-allauth[socialaccount]>=65.13.1",
    "django-crispy-forms>=2.5",
    "easy-thumbnails>=2.10.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "websocket-client>=1.9.0",
]
